--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ body{
   background-color: rgba(0, 0, 0, 0.4);
 }
 
+.slides-navigation{
+  z-index:6;
+}
+
 .slides-navigation .prev,
 .slides-navigation .next{
   width:47px;
@@ -24,7 +28,7 @@ body{
 
 .slides-navigation a.prev{
   left:20px;
-  background-image: url(../img/icons/previous.png);
+  background-image: url(../img/icons/prev.png);
 }
 
 .slides-navigation a.next{
@@ -57,10 +61,6 @@ body{
 
 .titleMessage .heading .sub{
   font-size:23px;
-}
-
-.slides-navigation{
-  z-index:5;
 }
 
 .section{
@@ -294,7 +294,7 @@ body{
   left: -200px;
 }
 
-.items .projectlink{
+.items .projectLink{
   float: right;
   right: -200px;
 
@@ -304,7 +304,7 @@ body{
   left: 0px;
 }
 
-.items .item:hover .projectlink{
+.items .item:hover .projectLink{
   right: 0px;
 }
 
@@ -350,13 +350,29 @@ body{
   color: #fff;
 }
 
-.navbar-toggler-icon{
+.navbar-toggler-icon {
   background: url(../img/icons/menu.png);
   background-size: 100%;
-  color: #fff;
 }
 
 .fixedNav #navigation {
   position: fixed;
   top: 0;
+}
+
+
+.loader{
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 1000;
+}
+
+.loader .inner{
+  width: 100%;
+  height: 100%;
+  background: url(../img/loader.gif) center center no-repeat;
 }
